# internal/server/auth.go
@@ -1,7 +1,10 @@
 package server
 
 import (
+	"database/sql"
+	"errors"
 	"net/http"
+	"strings"
 	"time"
 
 	"github.com/evergarden0412/gptea-api/internal"
@@ -90,19 +93,25 @@ func (s *Server) handleSignIn(ctx *gin.Context) {
 		golog.Error("handleSignIn: new credential: ", err)
 		return
 	}
-
 	verifyResult, err := cred.Verify(ctx, body.AccessToken)
 	if err != nil {
 		ctx.JSON(http.StatusBadRequest, errorResponse{Error: err.Error()})
 		golog.Error("handleSignIn: verify: ", err)
 		return
 	}
+
 	userID, err := s.db.SignIn(ctx, verifyResult.CredentialProvider, verifyResult.CredentialID)
-	if err != nil {
+	if errors.Is(err, sql.ErrNoRows) {
+		ctx.JSON(http.StatusBadRequest, errorResponse{Error: err.Error()})
+		golog.Error("handleSignIn: sign in: ", err)
+		return
+	}
+	if err != nil && !errors.Is(err, sql.ErrNoRows) {
 		ctx.JSON(http.StatusInternalServerError, errorResponse{Error: err.Error()})
 		golog.Error("handleSignIn: sign in: ", err)
 		return
 	}
+
 	at, err := s.a.IssueAccessToken(userID)
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, errorResponse{Error: err.Error()})
@@ -118,5 +127,104 @@ func (s *Server) handleSignIn(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, signInHandlerOutput{
 		AccessToken:  at.Signed(),
 		RefreshToken: rt.Signed(),
+	})
+}
+
+type tokenResponse struct {
+	ExpiresAt time.Time `json:"exp,omitempty"`
+	IssuedAt  time.Time `json:"iat,omitempty"`
+	ID        string    `json:"jti,omitempty"`
+	Subject   string    `json:"sub,omitempty"`
+}
+
+// handleVerifyToken godoc
+// @Summary Verify a token
+// @Description Verify a accesstoken
+// @Security AccessTokenAuth
+// @Success 200 {object} tokenResponse
+// @Failure 400 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Router /auth/token/verify [get]
+// @tags token
+func (s *Server) handleVerifyToken(ctx *gin.Context) {
+	var header tokenHeader
+	if err := ctx.ShouldBindHeader(&header); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse{Error: err.Error()})
+		golog.Error("handleVerifyToken: bind header: ", err)
+		return
+	}
+	atStr, found := strings.CutPrefix(header.Authorization, "Bearer ")
+	if !found {
+		ctx.JSON(http.StatusBadRequest, errorResponse{Error: "no bearer prefix"})
+		golog.Error("handleVerifyToken: cut prefix: not found")
+		return
+	}
+
+	at, err := s.a.VerifyAccessToken(atStr)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse{Error: err.Error()})
+		golog.Error("handleVerifyToken: verify access token: ", err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, tokenResponse{
+		ExpiresAt: at.ExpiresAt.Time,
+		IssuedAt:  at.IssuedAt.Time,
+		ID:        at.ID,
+		Subject:   at.Subject,
+	})
+}
+
+// handleRefreshToken godoc
+// @Summary Refresh a tokenq
+// @Description Refresh a token
+// @Security AccessTokenAuth
+// @Security RefreshTokenAuth
+// @Success 200 {object} signInHandlerOutput
+// @Failure 400 {object} errorResponse
+// @Failure 500 {object} errorResponse
+// @Router /auth/token/refresh [post]
+// @tags token
+func (s *Server) handleRefreshToken(ctx *gin.Context) {
+	var header tokenHeader
+	if err := ctx.ShouldBindHeader(&header); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse{Error: err.Error()})
+		golog.Error("handleRefreshToken: bind header: ", err)
+		return
+	}
+	atStr, found := strings.CutPrefix(header.Authorization, "Bearer ")
+	if !found {
+		ctx.JSON(http.StatusBadRequest, errorResponse{Error: "no bearer prefix"})
+		golog.Error("handleRefreshToken: cut prefix: not found")
+		return
+	}
+	if atStr == "" || header.XRefreshToken == "" {
+		ctx.JSON(http.StatusBadRequest, errorResponse{Error: "no token"})
+		golog.Error("handleRefreshToken: no token")
+		return
+	}
+
+	at, err := s.a.VerifyAccessTokenForRefresh(atStr)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse{Error: err.Error()})
+		golog.Error("handleRefreshToken: verify access token: ", err)
+		return
+	}
+	rt, err := s.a.VerifyRefreshToken(header.XRefreshToken)
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse{Error: err.Error()})
+		golog.Error("handleRefreshToken: verify refresh token: ", err)
+		return
+	}
+	newAT, newRT, err := s.a.RefreshAccessToken(at, rt)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse{Error: err.Error()})
+		golog.Error("handleRefreshToken: refresh: ", err)
+		return
+	}
+
+	ctx.JSON(http.StatusOK, signInHandlerOutput{
+		AccessToken:  newAT.Signed(),
+		RefreshToken: newRT.Signed(),
 	})
 }
